--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html>
-<head>
-<title>My GitHub Pages Site</title>
-</head>
-<body>
-<h1>Hello SAP Customer Data Cloud!</h1>
-<p>Welcome to my GitHub Pages site!</p>
-</body>
+ <head>
+ <title>Mobile Ready Screen-Set Implementation Example</title>
+ <meta name="viewport" content="width=device-width">
+ <SCRIPT type="text/javascript" lang="javascript"
+ src="https://cdns.gigya.com/js/gigya.js?apikey=4_sf8emBDBVQ8HKee6d-rWYw"></SCRIPT>
+ </head>
+ <body>
+ <a href="#"
+ onclick="gigya.accounts.showScreenSet({screenSet:'DefaultLiteRegistration'});">Subscribe Here!</a>
+ </body>
 </html>
