--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
  src="https://cdns.gigya.com/js/gigya.js?apikey=4_sf8emBDBVQ8HKee6d-rWYw"></SCRIPT>
  </head>
  <body>
- <a href="#"
- onclick="gigya.accounts.showScreenSet({screenSet:'DefaultLiteRegistration'});">Subscribe Here!</a>
+ <a href="#"onclick="gigya.accounts.showScreenSet({screenSet:'DefaultLiteRegistration'});">Subscribe Here!</a>
  </body>
 </html>
