--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
  src="https://cdns.gigya.com/js/gigya.js?apikey=4_sf8emBDBVQ8HKee6d-rWYw"></SCRIPT>
  </head>
  <body>
- <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin'});">Subscribe Here!</a>
+ <a href="#"
+34 onclick="gigya.accounts.showScreenSet({screenSet:'Default-LiteRegistration'});">Subscribe Here!</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+ <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin', startScreen:'gigya-registerscreen'});">Register</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+ <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin'});">Login</a>
  </body>
 </html>
