--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  &nbsp;&nbsp;|&nbsp;&nbsp;<a href="#" onclick="logout();">Logout</a>
  </span>
  <script type="text/javascript" lang="javascript">
-38 // calls logout then hides the logout link if the logout succeeds
+ // calls logout then hides the logout link if the logout succeeds
  function logout() {
  gigya.accounts.logout({callback:function (response) {
  if (response.errorCode == 0) {
@@ -38,4 +38,4 @@
  });
  </script>
  </body>
-39</html>
+</html>
