--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <title>Mobile Ready Screen-Set Implementation Example</title>
  <meta name="viewport" content="width=device-width">
  <SCRIPT type="text/javascript" lang="javascript"
- src="http://cdn.gigya.com/js/gigya.js?apikey=4_sf8emBDBVQ8HKee6d-rWYw"></SCRIPT>
+ src="https://cdn.gigya.com/js/gigya.js?apikey=4_sf8emBDBVQ8HKee6d-rWYw"></SCRIPT>
  </head>
  <body>
  <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-LiteRegistration'});">Subscribe Here!</a>&nbsp;&nbsp;|&nbsp;&nbsp;
