--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <SCRIPT type="text/javascript" lang="javascript"
  src="http://cdn.gigya.com/js/gigya.js?apikey=4_sf8emBDBVQ8HKee6d-rWYw">
  </SCRIPT>
-79 </head>
+ </head>
  <body><h1>RBA Exercise</h1>
  <h4>Register a user and then try to login with a wrong password 5 times</h4>
  <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'DefaultRegistrationLogin', startScreen:'gigya-registerscreen'});">Register</a>&nbsp;&nbsp;|&nbsp;&nbsp;
