--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
- <head><title>RBA Exercise</title>
- <SCRIPT type="text/javascript" lang="javascript"
- src="http://cdn.gigya.com/js/gigya.js?apikey=4_sf8emBDBVQ8HKee6d-rWYw">
- </SCRIPT>
- </head>
+<!DOCTYPE html>
+  <head>
+    <title>Mobile Ready Screen-Set Implementation Example</title>
+    <meta name="viewport" content="width=device-width">
+    <SCRIPT type="text/javascript" lang="javascript"
+    src="https://cdns.gigya.com/js/gigya.js?apikey=4_sf8emBDBVQ8HKee6d-rWYw"></SCRIPT>
+  </head>
  <body><h1>RBA Exercise</h1>
  <h4>Register a user and then try to login with a wrong password 5 times</h4>
  <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'DefaultRegistrationLogin', startScreen:'gigya-registerscreen'});">Register</a>&nbsp;&nbsp;|&nbsp;&nbsp;
