--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
 <body><h1>RBA Exercise</h1>
  <h4>Register a user and then try to login with a different browser</h4>
- <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'DefaultRegistrationLogin', startScreen:'gigya-registerscreen'});">Register</a>&nbsp;&nbsp;|&nbsp;&nbsp;
- <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'DefaultRegistrationLogin'});">Login</a>
+ <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin', startScreen:'gigya-register-screen'});">Register</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+ <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin'});">Login</a>
  <span id="logout" hidden>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#"
 onclick="logout();">Logout</a></span>
  <script type="text/javascript" lang="javascript">
