--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
  <h4>Register a user and then try to login with a different browser</h4>
  <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin', startScreen:'gigya-register-screen'});">Register</a>&nbsp;&nbsp;|&nbsp;&nbsp;
  <a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Default-RegistrationLogin'});">Login</a>
- <span id="logout" hidden>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#"
-onclick="logout();">Logout</a></span>
+ <span id="logout" hidden>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#" onclick="logout();">Logout</a></span>
  <script type="text/javascript" lang="javascript">
  function logout() {
  gigya.accounts.logout({callback:function (response) {
